# noctis

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  cliff.toml
.claude/commands/: agent-loop.md  fill-backlog.md  make-test.md  run-agents.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yml  cve.yml  feature.yml  misconfig.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  release.yml
infra/: Taskfile.yml  ansible.cfg  build-images.yml  site.yml
infra/bake/: apache.hcl  atlassian.hcl  f5.hcl  fortinet.hcl  gitlab.hcl  ivanti.hcl  jenkins.hcl  misc.hcl  network.hcl  php.hcl  ssh.hcl
infra/playbooks/: 00-build-mocks.yml  00-build-noctis.yml  01-start-servers.yml  10-CVE-2014-6271.yml  10-CVE-2017-1000353.yml  10-CVE-2017-9841.yml  10-CVE-2019-0708.yml  10-CVE-2019-11510.yml  10-CVE-2019-9621.yml  10-CVE-2021-20123.yml  10-CVE-2021-22175.yml  10-CVE-2021-22205.yml  10-CVE-2021-22986.yml  10-CVE-2021-26084.yml  10-CVE-2021-26086.yml  10-CVE-2021-41277.yml  10-CVE-2021-41773.yml  10-CVE-2021-42013.yml  10-CVE-2022-1388.yml  10-CVE-2022-22954.yml  10-CVE-2022-22965.yml  10-CVE-2022-43769.yml  10-CVE-2022-43939.yml  10-CVE-2022-47966.yml  10-CVE-2023-22527.yml  10-CVE-2023-23752.yml  10-CVE-2023-26360.yml  10-CVE-2023-27524.yml  10-CVE-2023-28432.yml  10-CVE-2023-2868.yml  10-CVE-2023-35082.yml  10-CVE-2023-41266.yml  10-CVE-2023-43208.yml  10-CVE-2023-43770.yml  (+120 more)
schemas/: feed.schema.json
scripts/: run-agents.sh
src/: cli.rs  error.rs  main.rs
(+768 files in other folders)
