[package]
name = "noctis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "noctis"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.150"
indexmap = { version = "2.14.0", features = ["serde"] }

# HTTP client
reqwest = { version = "0.13.4", features = ["json", "rustls", "stream"], default-features = false }

# TLS inspection
rustls = { version = "0.23.41", features = ["ring"] }
rustls-pki-types = "1.14.1"
x509-parser = "0.18.1"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.8"

# SSH
ssh2 = "0.9.5"

# Scripting / expressions
rhai = { version = "1.25.1", features = ["sync"] }

# OOB server
axum = "0.8.9"
tower = "0.5.3"

# Pattern matching
regex = "1.12.4"

# Error handling
anyhow = "1.0.103"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Utils
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
glob = "0.3.3"
tokio-util = { version = "0.7.18", features = ["io"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Terminal output
colored = "3.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
